--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.1.2",
+    "sanity-plugin-iframe-pane": "^2.1.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4"
   },
